# Portfolio_Tracker-deveroskp

./: README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  verify_rebalancing.py
backend/app/: main.py
backend/app/controllers/: portfolio_controller.py  rebalancing_controller.py  transaction_controller.py
backend/app/models/: transaction.py
backend/app/repositories/: portfolio_repository.py  transaction_repository.py
backend/app/schemas/: portfolio.py  rebalancing.py  transaction.py
backend/app/services/: portfolio_service.py  rebalancing_service.py  transaction_service.py
backend/database/: connection.py  settings.py
frontend/: .env  package.json
frontend/public/: mockdata.json
frontend/src/: App.tsx
frontend/src/components/: HoldingsTable.tsx  Notification.tsx  Sidebar.tsx
frontend/src/components/Transaction/: TransactionHeader.tsx  TransactionInput.tsx  (+2 more)
frontend/src/context/: PortfolioContext.tsx
frontend/src/hooks/: useNews.ts  usePortfolioQueries.ts  useStockPrices.ts  useYahooQuote.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Dashboard.tsx  Rebalancing.tsx  Transactions.tsx
frontend/src/services/: api.ts  finnhub.ts  yahooFinance.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
public/: mockdata.json
src/: index.css
src/components/: Transaction.tsx  TransactionInput.tsx
src/pages/: Dashboard.tsx  Transactions.tsx
src/services/: api.ts
src/types/: index.ts
src/utils/: formatters.ts
